# scientific-papers-mcp

./: .env.example  .gitignore  DOCLING_SETUP.md  EXEMPLE_EXTRACTION_PYMUPDF.md  LLAMAINDEX_INTEGRATION.md  LLAMAPARSE_SETUP.md  MARKER_SETUP.md  QUICK_START.md  README.md  README_EXTRACTION.md  README_TENSORLAKE.md  SETUP_CLAUDE_CODE.md  claude.json.example  compare_extractors.py  create_test_pdf.py  delete_jina_collection.py  delete_old_collection.py  delete_voyage_collection.py  demo_pdf_extraction.py  extract_pdf_to_md.py  fix_and_index.py  index_all.py  index_zotero_library.py  pyproject.toml  reindex_qwen.py  search_results.json  setup_mcp.py  show_extraction_example.py  test_chroma_upgrade.py  test_comparison.py  test_docling_install.py  test_index_5_docs.py  test_llamaparse.py  test_marker_comparison.py  test_marker_simple.py  test_multimodal.py  test_quality_improvements.py  test_search_simple.py  test_tensorlake.py  test_voyage.py  (+6 more)
.claude/: settings.local.json
data/: indexing_state.json
data/chroma_qwen/: chroma.sqlite3
data/chroma_test_5/: chroma.sqlite3
src/: __init__.py  __main__.py  config.py  server.py
src/embeddings/: __init__.py  jina_api_client.py  jina_client.py  voyage_hybrid_client.py  voyage_text_client.py
src/extractors/: docling_extractor.py  llamaextract_extractor.py  llamaparse_extractor.py  marker_api_extractor.py  marker_local_extractor.py  metadata_extractor.py  patterns.py  pdf_extractor.py  tensorlake_extractor.py
src/indexing/: chroma_client.py  chunker.py  cohere_reranker.py  collection_sync.py  deduplicator.py  hybrid_search.py  indexing_state.py  reranker.py  rrf_fusion.py  search_api_wrapper.py  zotero_indexer.py
src/models/: __init__.py  document.py
src/query/: __init__.py  llama_query_engine.py
src/utils/: logger.py  text_chunker.py
tests/: __init__.py  test_complete.py  test_pdf_chunking.py  test_pdf_extractor.py  test_pdf_indexing.py  test_search.py  test_server.py
